prepare for devnet

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,7 +1,7 @@
 ETHEREUM_JSONRPC_VARIANT=geth
-ETHEREUM_JSONRPC_HTTP_URL=https://zkevm-testnet.nexis.network
-ETHEREUM_JSONRPC_WS_URL=wss://zkevm-testnet.nexis.network
-ETHEREUM_JSONRPC_TRACE_URL=https://zkevm-testnet.nexis.network
+ETHEREUM_JSONRPC_HTTP_URL=https://evm-devnet.nexis.network
+ETHEREUM_JSONRPC_WS_URL=wss://evm-devnet.nexis.network
+ETHEREUM_JSONRPC_TRACE_URL=https://evm-devnet.nexis.network
 NETWORK=Nexis
 SUBNETWORK=Nexis
 LOGO=/images/blockscout_logo.svg
