switch to testnet from devnet

--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -2,12 +2,12 @@ FAVICON_MASTER_URL=https://raw.githubusercontent.com/Nexis-Network/nexscan-data/
 NEXT_PUBLIC_AD_BANNER_PROVIDER=none
 NEXT_PUBLIC_AD_TEXT_PROVIDER=none
 NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_API_HOST=evm-devnet.nexscan.io
+NEXT_PUBLIC_API_HOST=evm-testnet.nexscan.io
 NEXT_PUBLIC_API_PORT=443
 NEXT_PUBLIC_API_PROTOCOL=https
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
-NEXT_PUBLIC_APP_HOST=evm-devnet.nexscan.io
+NEXT_PUBLIC_APP_HOST=evm-testnet.nexscan.io
 NEXT_PUBLIC_APP_PORT=443
 NEXT_PUBLIC_APP_PROTOCOL=https
 NEXT_PUBLIC_FEATURED_NETWORKS=https://raw.githubusercontent.com/Nexis-Network/nexscan-data/main/links/testnet.json
@@ -26,13 +26,13 @@ NEXT_PUBLIC_NETWORK_ID=2371
 NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/Nexis-Network/nexscan-data/main/logos/logo-dark-full.svg
 NEXT_PUBLIC_NETWORK_LOGO_DARK=https://raw.githubusercontent.com/Nexis-Network/nexscan-data/main/logos/logo-light-full.svg
 NEXT_PUBLIC_NETWORK_NAME=Nexis Network
-NEXT_PUBLIC_NETWORK_RPC_URL=https://evm-devnet.nexis.network
+NEXT_PUBLIC_NETWORK_RPC_URL=https://evm-testnet.nexis.network
 NEXT_PUBLIC_NETWORK_SHORT_NAME=NZT
 NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE=validation
 NEXT_PUBLIC_OG_DESCRIPTION="Nexscan is a tool for analyzing the Nexis blockchain"
 NEXT_PUBLIC_OG_IMAGE_URL=https://raw.githubusercontent.com/Nexis-Network/nexscan-data/main/logos/logo-dark-full.svg
 NEXT_PUBLIC_OTHER_LINKS=[{'url':'https://wallet.nexis.network/','text':'Web Wallet'}, {'url':'https://bridge.nexis.network','text':'Bridge'}, {'url':'https://governance.nexis.network/','text':'Governance'}]
 NEXT_PUBLIC_PROMOTE_BLOCKSCOUT_IN_TITLE=false
-NEXT_PUBLIC_STATS_API_HOST=https://evm-devnet.nexscan.io:8080
-NEXT_PUBLIC_VISUALIZE_API_HOST=https://evm-devnet.nexscan.io:8081
+NEXT_PUBLIC_STATS_API_HOST=https://evm-testnet.nexscan.io:8080
+NEXT_PUBLIC_VISUALIZE_API_HOST=https://evm-testnet.nexscan.io:8081
 NEXT_PUBLIC_WEB3_WALLETS=['metamask','coinbase']
