--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,7 +1,7 @@
 ETHEREUM_JSONRPC_VARIANT=geth
-ETHEREUM_JSONRPC_HTTP_URL=https://evm-devnet.nexis.network
-ETHEREUM_JSONRPC_WS_URL=wss://evm-devnet.nexis.network
-ETHEREUM_JSONRPC_TRACE_URL=https://evm-devnet.nexis.network
+ETHEREUM_JSONRPC_HTTP_URL=https://evm-testnet.nexis.network
+ETHEREUM_JSONRPC_WS_URL=wss://evm-testnet.nexis.network
+ETHEREUM_JSONRPC_TRACE_URL=https://evm-testnet.nexis.network
 NETWORK=Nexis
 SUBNETWORK=Nexis
 LOGO=/images/blockscout_logo.svg
@@ -82,7 +82,7 @@ APPS_MENU=true
 EXTERNAL_APPS=[]
 SHOW_MAINTENANCE_ALERT=false
 MAINTENANCE_ALERT_MESSAGE=
-CHAIN_ID=2371
+CHAIN_ID=2370
 MAX_SIZE_UNLESS_HIDE_ARRAY=50
 HIDE_BLOCK_MINER=false
 DISPLAY_TOKEN_ICONS=false
