--- a/docker-compose/envs/common-user-ops-indexer.env
+++ b/docker-compose/envs/common-user-ops-indexer.env
@@ -10,7 +10,7 @@ USER_OPS_INDEXER__SERVER__GRPC__ADDR=0.0.0.0:8051
 
 USER_OPS_INDEXER__API__MAX_PAGE_SIZE=100
 
-USER_OPS_INDEXER__INDEXER__RPC_URL=https://evm-devnet.nexis.network
+USER_OPS_INDEXER__INDEXER__RPC_URL=https://evm-testnet.nexis.network
 USER_OPS_INDEXER__INDEXER__CONCURRENCY=20
 USER_OPS_INDEXER__INDEXER__ENTRYPOINTS__V06=true
 USER_OPS_INDEXER__INDEXER__ENTRYPOINTS__V07=true
