--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -14,7 +14,7 @@ NEXT_PUBLIC_FEATURED_NETWORKS=https://raw.githubusercontent.com/Nexis-Network/ne
 NEXT_PUBLIC_FOOTER_LINKS=https://raw.githubusercontent.com/Nexis-Network/nexscan-data/main/links/footer.json
 # NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs','coin_price','market_cap']
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
-NEXT_PUBLIC_HOMEPAGE_HERO_BANNER_CONFIG={background: 'https://raw.githubusercontent.com/Nexis-AI/UI-Images/refs/heads/main/explorer-bg.png'}
+NEXT_PUBLIC_HOMEPAGE_HERO_BANNER_CONFIG=https://raw.githubusercontent.com/Nexis-AI/UI-Images/refs/heads/main/explorer-bg.png
 NEXT_PUBLIC_HOMEPAGE_STATS=['total_blocks', 'total_txs', 'average_block_time', 'gas_tracker']
 NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
